@@ -1,3 +1,11 @@
+2012-12-14  Jer Noble  <jer.noble@apple.com>
+
+        Unreviewed bug fix after r137782.
+
+        Add new source file TextTrackRepresentation.cpp to CMakeLists.txt.
+
+        * CMakeLists.txt:
+
 2012-12-14  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r137767.
